# omirror

./: .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  release-please-config.json  settings.json
.github/: pull_request_template.md
.github/workflows/: ci.yml  release-please.yml
src/omirror/: app.py  config.py  const.py  i18n.py  main.py  updater.py
src/omirror/assets/fonts/: AdobeFnt14.lst
src/omirror/bluetooth/: adapters.py  advertising.py  exceptions.py  gatt.py  server.py
src/omirror/display/: centered_text.py  renderer.py  text_utils.py
src/omirror/display/widgets/: activities.py  base.py  datetime_widget.py  loading.py  name_display.py  news.py  overlay_text.py  quote.py  weather.py
src/omirror/hardware/: rgb.py  wifi.py
src/omirror/locale/en/LC_MESSAGES/: omirror.mo  omirror.po
src/omirror/locale/sv/LC_MESSAGES/: omirror.mo  omirror.po
src/omirror/widgets/: activities.py  news.py  quotes.py  weather.py
tests/: test_activities.py  test_app_helpers.py  test_centered_text.py  test_const.py  test_gatt_protocol.py  test_news.py  test_quotes.py  test_text_utils.py  test_weather.py
