[project]
name = "omirror"
version = "0.1.0"
description = "Raspberry Pi smart mirror"
requires-python = ">=3.11"
dependencies = [
    "feedparser",
    "pygame-ce",
    "requests",
]

[project.optional-dependencies]
pi = [
    "lgpio",
    "pigpio",
    "dbus-python",
]

[project.scripts]
omirror    = "omirror.main:main"
omirror-bt = "omirror.bluetooth.server:main"

[build-system]
requires      = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/omirror"]

[tool.hatch.build.targets.wheel.shared-data]
# include compiled .mo files so translations are available after install
"src/omirror/locale" = "omirror/locale"

[tool.ruff]
line-length    = 100
target-version = "py311"
src            = ["src"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "SIM"]
ignore = [
    "E501",  # line too long — handled by formatter
    "B008",  # function calls in default arguments
]

[tool.ruff.lint.isort]
known-first-party = ["omirror"]

[tool.ruff.format]
quote-style  = "double"
indent-style = "space"

[tool.commitizen]
name    = "cz_conventional_commits"
version = "0.1.0"
tag_format = "v$version"
version_files = ["pyproject.toml:version", "src/omirror/__init__.py:__version__"]

[dependency-groups]
dev = [
    "commitizen",
    "pytest",
]
